--- a/PracticaSeptember2021/Views/Home/Index.cshtml
+++ b/PracticaSeptember2021/Views/Home/Index.cshtml
@@ -1,6 +1,11 @@
-﻿@{
+﻿@model string;
+@{
     ViewData["Title"] = "Home Page";
 }
+
+<br />
+<h1>@Model</h1>
+<br />
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
